--- a/bookmarklets/style.css
+++ b/bookmarklets/style.css
@@ -106,7 +106,7 @@ input[type="checkbox"]{
   text-align: center;
   height:100vh;
   width: 100vw;
-  color: #1b1b1b;
+  color: #fff;
   background: rgb(34,245,156);
   background: linear-gradient(180deg, rgba(34,245,156,1) 0%, rgba(0,212,255,1) 100%);
   position:absolute;
@@ -115,7 +115,6 @@ input[type="checkbox"]{
   left:0px;
 }   
 .content div{
-  margin-top: 50px;
   font-size: 50px;
   font-weight: 700;
 }
@@ -176,4 +175,8 @@ a{
     100%{
       background-position: 400%;
     }
+  }
+
+  .code1 {
+    display: none !important;
   }
