--- a/games/style.css
+++ b/games/style.css
@@ -204,3 +204,34 @@ a:hover {
 		background-position: 400%;
 	}
 }
+.loader-container{
+    width: 100%;
+    height: 100vh;
+    background-color: #111;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loader{
+    width: 50px;
+    height: 50px;
+    border: 5px solid;
+    color: #3498db;
+    border-radius: 50%;
+    border-top-color: transparent;
+    animation: loader 1.2s linear infinite;
+}
+
+@keyframes loader{
+    33%{
+        color: #2ecc71;
+    }
+    67%{
+        color: #0fc0f1;
+    }
+    to{
+        transform: rotate(360deg);
+    }
+}
