--- a/games/style.css
+++ b/games/style.css
@@ -235,3 +235,11 @@ a:hover {
         transform: rotate(360deg);
     }
 }
+
+p {
+	position: absolute;
+    bottom: 0;
+    left: 40%;
+	text-align: center !important;
+	font-size: 20px !important;
+}
