--- a/games/style.css
+++ b/games/style.css
@@ -125,7 +125,7 @@ input[type="checkbox"] {
 	text-align: center;
 	height: 100vh;
 	width: 100vw;
-	color: #1b1b1b;
+	color: #f3f3f3;
 	background: rgb(34, 245, 156);
 	background: linear-gradient(180deg, rgba(34, 245, 156, 1) 0%, rgba(0, 212, 255, 1) 100%);
 	position: absolute;
@@ -236,10 +236,13 @@ a:hover {
     }
 }
 
-p {
+.credit {
 	position: absolute;
     bottom: 0;
-    left: 40%;
+    left: 0%;
 	text-align: center !important;
+	background-color: #000000;
+	width:100%;
 	font-size: 20px !important;
+	color: white !important;
 }
